[package]
name = "interactsh-rs"
version = "0.1.0-RC2"
edition = "2021"
authors = ["Matt George <pyroraptor07@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust client library for working with Interact.sh servers"
readme = "README.md"
repository = "https://github.com/pyroraptor07/interactsh-rs"
keywords = ["interactsh", "oob-interactions"]


[features]
default = ["rustcrypto", "rustls-tls", "async-compat"]

# Crypto features
openssl = ["dep:openssl"]
openssl-vendored = ["openssl", "openssl?/vendored"]
rustcrypto = ["dep:rsa", "dep:aes", "dep:cfb-mode", "dep:sha2", "dep:digest", "dep:inout"]

# TLS features (new names)
native-tls = ["reqwest/default-tls"]
native-tls-vendored = ["native-tls", "reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

# TLS features (old names, will be removed in a later version)
reqwest-native-tls = ["native-tls"]
reqwest-native-tls-vendored = ["native-tls-vendored"]
reqwest-rustls-tls = ["rustls-tls"]

# Other features
async-compat = ["dep:async-compat"]
nightly = []

# Planned future features
# socks-proxy = ["reqwest/socks"]
# log = ["dep:log"]


[dependencies]
base64 = "0.13"
cfg-if = "1"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
svix-ksuid = "0.6"
secrecy = "0.8"
thiserror = "1.0.36"
time = { version = "0.3.14", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }

# RustCrypto dependencies
aes = { version = "0.8.1", optional = true }
cfb-mode = { version = "0.8.2", optional = true }
digest = { version = "0.10.5", optional = true }
inout = { version = "0.1.3", features = ["std"], optional = true }
rsa = { version = "0.6.1", optional = true }
sha2 = { version = "0.10.6", optional = true }

# Native crypto dependencies
openssl = { version = "0.10.41", optional = true }

# Other optional dependencies
async-compat = { version = "0.2", optional = true }
# log = { version = "0.4.17", optional = true }


[dev-dependencies]
async-compat = "0.2"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
async-std = { version = "1", features = ["attributes"] }
smol = "1"
hex = "0.4"
fake = "2.5"
trust-dns-resolver = "0.22"
dotenvy = "0.15"
once_cell = "1.15"

[build-dependencies]
rustversion = "1"
