[package]
name = "interactsh-rs"
version = "0.2.1"
edition = "2021"
authors = ["Matt George <pyroraptor07@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust client library for working with Interact.sh servers"
readme = "README.md"
repository = "https://github.com/pyroraptor07/interactsh-rs"
keywords = ["interactsh", "oob-interactions"]


[features]
default = ["rustcrypto", "rustls-tls", "async-compat"]

# Crypto features
openssl = ["dep:openssl"]
openssl-vendored = ["openssl", "openssl?/vendored"]
rustcrypto = ["dep:rsa", "dep:aes", "dep:cfb-mode", "dep:sha2"]

# TLS features (new names)
native-tls = ["reqwest/default-tls"]
native-tls-vendored = ["native-tls", "reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]

# TLS features (old names, will be removed in a later version)
reqwest-native-tls = ["native-tls"]
reqwest-native-tls-vendored = ["native-tls-vendored"]
reqwest-rustls-tls = ["rustls-tls"]

# Other features
async-compat = ["dep:async-compat"]
client-next = []
log-stream = ["dep:futures-util", "dep:async-stream", "dep:async-io"]
nightly = []


[dependencies]
async-trait = "0.1.62"
base64 = "0.21.0"
cfg-if = "1"
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1.10.0", features = ["serde"] }
snafu = "0.7.3"
time = { version = "0.3.14", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }

# RustCrypto dependencies
aes = { version = "0.8.1", optional = true }
cfb-mode = { version = "0.8.2", optional = true }
rsa = { version = "0.8.0", optional = true }
sha2 = { version = "0.10.6", optional = true }

# Native crypto dependencies
openssl = { version = "0.10.41", optional = true }

# Other optional dependencies
async-compat = { version = "0.2", optional = true }
async-io = { version = "1.12", optional = true }
async-stream = { version = "0.3.3", optional = true }
futures-util = { version = "0.3.25", optional = true }


[dev-dependencies]
async-compat = "0.2"
color-eyre = "0.6"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
async-std = { version = "1", features = ["attributes"] }
smol = "1"
hex = "0.4"
fake = "2.5"
trust-dns-resolver = "0.22"
dotenvy = "0.15"
once_cell = "1.15"

[build-dependencies]
rustversion = "1"
