[package]
name = "interactsh-rs-crypto"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false

[lib]
name = "interactsh_rs_crypto"
path = "src/lib.rs"

[features]
rustcrypto = ["dep:aes", "dep:cfb-mode", "dep:rsa", "dep:sha2", "impl-deps"]
openssl = ["dep:openssl", "impl-deps"]
vendored = ["openssl?/vendored"]
impl-deps = ["dep:base64", "dep:rand"]

[dependencies]
snafu = "0.7.4"
tap = "1.0"

# Shared dependencies used for trait implementations
base64 = { version = "0.21.2", optional = true }
rand = { version = "0.8.5", optional = true }

# RustCrypto dependencies
aes = { version = "0.8.3", optional = true }
cfb-mode = { version = "0.8.2", optional = true }
rsa = { version = "0.9.2", optional = true }
sha2 = { version = "0.10.7", optional = true }

# Native crypto dependencies
openssl = { version = "0.10.55", optional = true }
